<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/fab_margin"
    tools:context="io.idbox.fpsample.UserInfoActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:labelFor="@+id/editTextPhoneNumber"
        android:text="@string/user_phone_number"/>

    <EditText
        android:id="@+id/editTextPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:labelFor="@+id/editTextPhoneNumberConfirm"
        android:text="@string/confirm_phone_number"/>

    <EditText
        android:id="@+id/editTextPhoneNumberConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        />

    <Button
        android:textColor="@color/white"
        android:theme="@style/ButtonColored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:onClick="clickBarCode"
        android:text="@string/attach_card"/>
    <TextView
        android:id="@+id/textViewCardStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <Button
        android:textColor="@color/white"
        android:id="@+id/buttonValidate"
        android:theme="@style/ButtonColored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:onClick="clickValidate"
        android:text="@string/validate"/>
</LinearLayout>
