<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.idbox.fpsample.SettingsActivity"
    android:orientation="vertical"
    android:padding="@dimen/fab_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sim_card_phone_number"
        android:layout_marginTop="30dp"
        android:labelFor="@+id/editTextPhoneNumber"/>

    <EditText
        android:id="@+id/editTextPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/server_phone_number"
        android:layout_marginTop="30dp"
        android:labelFor="@+id/editTextServerNumber"/>

    <EditText
        android:id="@+id/editTextServerNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currency"
        android:layout_marginTop="30dp"
        android:labelFor="@+id/editTextCurrency"/>

    <EditText
        android:id="@+id/editTextCurrency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        />

    <CheckBox
        android:id="@+id/checkboxSendUserConfirmation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Send confirmation SMS"/>

    <Button
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/validate"
        android:theme="@style/ButtonColored"
        android:layout_marginTop="30dp"
        android:onClick="clickValidate"/>
</LinearLayout>
